Enable expression language in OpenOCR and tidy up code