@@ -23,13 +23,6 @@ package uk.gov.dstl.nifi.openocr.processors;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.Closeable;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.charset.Charset;
-import java.util.*;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpEntity;
 import org.apache.http.client.methods.CloseableHttpResponse;
@@ -40,12 +33,22 @@ import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
-import org.apache.nifi.components.*;
+import org.apache.nifi.components.AllowableValue;
+import org.apache.nifi.components.PropertyDescriptor;
+import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.*;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
 import uk.gov.dstl.openocr.OpenOCRRequestBase64;
+
+import java.io.Closeable;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.charset.Charset;
+import java.util.*;
 
 /**
  * Uses an external OpenOCR (https://github.com/tleyden/open-ocr) instance to extract text from
@@ -113,6 +116,7 @@ public class OpenOCRProcessor extends AbstractProcessor {
           .description("JSON object containing additional arguments to pass to the OpenOCR engine")
           .required(false)
           .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+          .expressionLanguageSupported(ExpressionLanguageScope.FLOWFILE_ATTRIBUTES)
           // TODO: Can we validate it's a JSON object?
           .build();
 
@@ -134,19 +138,15 @@ public class OpenOCRProcessor extends AbstractProcessor {
 
   @Override
   protected void init(final ProcessorInitializationContext context) {
-    List<PropertyDescriptor> descriptors = new ArrayList<>();
-    descriptors.add(PROPERTY_OPENOCR_SCHEME);
-    descriptors.add(PROPERTY_OPENOCR_HOST);
-    descriptors.add(PROPERTY_OPENOCR_PORT);
-    descriptors.add(PROPERTY_PREPROCESSORS);
-    descriptors.add(PROPERTY_ENGINE_ARGS);
-    this.descriptors = Collections.unmodifiableList(descriptors);
+    this.descriptors = List.of(PROPERTY_OPENOCR_SCHEME,
+        PROPERTY_OPENOCR_HOST,
+        PROPERTY_OPENOCR_PORT,
+        PROPERTY_PREPROCESSORS,
+        PROPERTY_ENGINE_ARGS);
 
-    Set<Relationship> relationships = new HashSet<>();
-    relationships.add(RELATIONSHIP_EXTRACTED);
-    relationships.add(RELATIONSHIP_ORIGINAL_SUCCESS);
-    relationships.add(RELATIONSHIP_ORIGINAL_FAILURE);
-    this.relationships = Collections.unmodifiableSet(relationships);
+    this.relationships = Set.of(RELATIONSHIP_EXTRACTED,
+        RELATIONSHIP_ORIGINAL_SUCCESS,
+        RELATIONSHIP_ORIGINAL_FAILURE);
   }
 
   @Override
@@ -199,7 +199,7 @@ public class OpenOCRProcessor extends AbstractProcessor {
         // TODO: We could optimise this by only doing it when the configuration changes
         Map<String, Object> arguments =
             OBJECT_MAPPER.readValue(
-                context.getProperty(PROPERTY_ENGINE_ARGS).getValue(),
+                context.getProperty(PROPERTY_ENGINE_ARGS).evaluateAttributeExpressions(flowFile).getValue(),
                 new TypeReference<HashMap<String, Object>>() {});
         request.setEngineArgs(arguments);
       } catch (IOException e) {
